--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "dependencies": {
     "reveal.js": "^5.2.1"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2"
   }
 }
