feat: add scripts, and ignore file

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "live-server --open=./index.html --port=8000",
+    "build": "pnpm exec reveal.js build index.html dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
